--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </section>
 
     <!-- Support Us Section -->
-    <section class="support-us">
+    <section class="support-us" id="support-us">
         <div class="support-content">
             <h2>Support Us</h2>
             <p>At PAWPALS, we are dedicated to giving street animals a better life, and we can't do it alone. With your generous support, we can continue to provide food, shelter, medical care, and a loving home for animals in need. Your donation will directly impact the lives of these animals and help us expand our mission to save even more.</p>
